--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular-ui-router": "^0.3.0",
     "angularfire": "^1.2.0",
     "bootstrap": "^3.3.6",
+    "bootstrap-toggle": "^2.2.2",
     "firebase": "^2.4.2"
   }
 }
